# redis-studio

./: .gitignore  .lintstagedrc  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml  publish.yml  release.yml
app/: package.json  postcss.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/src/: wsServer.ts
app/src/client/: index.css  main.tsx  router.tsx
app/src/client/commands/: redis.ts
app/src/constants/: redisColors.ts  redisKeyTypes.ts
app/src/types/: index.ts
app/src/utils/: dirname.ts  logger.ts
cli/: package.json  tsconfig.json
cli/src/: index.ts  package.ts  utils.ts
desktop/: Cargo.toml  package.json  tauri.conf.json
desktop/capabilities/: default.json
desktop/icons/: icon.icns
desktop/src/: lib.rs  redis_map.rs
scripts/: build-cli.mjs  build-server.mjs  replace-version.mjs
src/: dev.ts  index.ts  wsServer.ts
src/cli/: index.ts
src/client/: colors.css  index.css
src/client/commands/: redis.ts
src/client/stores/: appStore.ts
src/server/constants/: path.ts
src/server/handler/: httpHtmlHandler.ts  httpStaticHandler.ts  httpUploadFileHandler.ts  index.ts  types.ts
src/server/lib/: redis.ts  redisMap.ts  response.ts
src/server/router/: apiRouter.ts
src/utils/: fs.ts
web/: README.md  astro.config.mjs  package.json  tsconfig.json
web/src/components/: LanguageSelect.astro  SEOHead.astro  Welcome.astro
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
(+209 files in other folders)
