[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-fs = "2.4.4"
redis = { version = "0.32.2", features = ["tokio-rustls-comp", "connection-manager"] }
tokio = { version = "1.48.0", features = ["full"] }
once_cell = "1.21.3"
dashmap = "6.1.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-dialog = "2.4.2"
